# x-loader

./: .gitignore  CMakeLists.txt  README.md  storage.c  xloader.c  xloader.h
boards/loshark/: board.c  linux_sfc_nor.h
boards/loshark_v2_2/: board.c  linux_sfc_nor.h
boards/x1501_som_evb/: board.c  linux_sfc_nor.h
common/: check_socid.c  common.c  printf.c
drivers/: clk.c  efuse.c  gpio.c  lpddr.c  mmc.c  sfc.c  spinand.c  uart.c  wdt.c
include/: aes.h  boards_common.h  common.h  gpio.h  string.h  types.h  ximage_header.h
include/lpddr/: lpddr_chip.h
include/lpddr/chip/: LPDDR_PMD606416A_8M.h  MDDR_JSD12164PAI_KGD.h
lib/tiny-AES-c/: aes.c  aes.h
linker/: x-loader.lds
stage2/: boot.c  init.c  stage2.h
stage2/lib/lwmem/: lwmem.c  lwmem.h  lwmem_opt.h
stage2/lib/lzma/: LzmaDec.c
tools/: CMakeLists.txt  gpt_creator.c  uart_baudrate_lut.c  xloader_patch.cpp
